# gifroz

./: .env.example  .env.test  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  vercel.json
.github/: FUNDING.yml
.github/workflows/: daily-random-gif.yml  schedule-random-gif.yml
api/: index.py
api/exceptions/: exceptions.py
api/services/: giphy_service.py  source_service.py  tenor_service.py
api/utils/: cache.py  image.py  logger.py
app/: __init__.py  config.py  source_api.py
app/routes/: gif_routes.py
app/services/: giphy_service.py  tenor_service.py
app/utils/: cache.py  logger.py
script/: uv-install-lib.sh
src/: giphy.py  source_api.py  tenor.py
tests/: test_app.py  test_cache.py  test_config.py  test_gif_routes.py  test_giphy_service.py  test_logger.py  test_tenor_service.py
